--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
   <section id="products" class="py-12 bg-green-50">
     <div class="max-w-6xl mx-auto px-6">
       <h2 class="text-3xl font-bold text-center mb-8 text-green-800">Our Herbal Products</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 px-4 py-6">
 
         <!-- Product 1–20 -->
         <div class="bg-white shadow-md rounded-lg overflow-hidden flex flex-col transform transition hover:-translate-y-1 hover:shadow-xl">
-          <img src="/product1.jpg" class="w-full h-36 object-cover" alt="Herbal Product 1">
+         <img src="./products/product.jpg" 
+     class="w-full h-48 object-cover rounded-t-lg" 
+     alt="product">
           <div class="p-4 flex flex-col flex-1 justify-between">
             <h3 class="font-semibold text-md text-green-900 mb-1">Herbal Product 1</h3>
             <p class="text-gray-700 text-sm mb-2">Short description here.</p>
