--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <!-- PRODUCT 1 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/1.jpg" class="w-full h-48 object-cover">
+        <img src="/images/product1.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Flat Tummy Herb</h3>
           <p class="text-gray-700 flex-1 mb-4">Natural stomach-slimming blend.</p>
@@ -73,7 +73,7 @@
 
       <!-- PRODUCT 2 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/2.jpg" class="w-full h-48 object-cover">
+        <img src="/images/product2.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Eye Bright Herb</h3>
           <p class="text-gray-700 flex-1 mb-4">Supports clear eyesight.</p>
@@ -84,7 +84,7 @@
 
       <!-- PRODUCT 3 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/3.jpg" class="w-full h-48 object-cover">
+        <img src="/images/product3.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Blood Cleanser</h3>
           <p class="text-gray-700 flex-1 mb-4">Body detox and circulation booster.</p>
@@ -95,7 +95,7 @@
 
       <!-- PRODUCT 4 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/4.jpg" class="w-full h-48 object-cover">
+        <img src="/images/product4.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Fertility Booster</h3>
           <p class="text-gray-700 flex-1 mb-4">Reproductive system support.</p>
@@ -106,7 +106,7 @@
 
       <!-- PRODUCT 5 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/5.jpg" class="w-full h-48 object-cover">
+        <img src="/images/product5.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Stroke Recovery Mix</h3>
           <p class="text-gray-700 flex-1 mb-4">Nerve + brain restoration herbs.</p>
@@ -117,7 +117,7 @@
 
       <!-- PRODUCT 6 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/6.jpg" class="w-full h-48 object-cover">
+        <img src="/images/product6.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Immune Booster</h3>
           <p class="text-gray-700 flex-1 mb-4">Supports natural immunity.</p>
@@ -128,7 +128,7 @@
 
       <!-- PRODUCT 7 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/7.jpg" class="w-full h-48 object-cover">
+        <img src="/images/product7.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Skin Glow Mix</h3>
           <p class="text-gray-700 flex-1 mb-4">Brightens and clears skin naturally.</p>
@@ -139,7 +139,7 @@
 
       <!-- PRODUCT 8 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/8.jpg" class="w-full h-48 object-cover">
+        <img src="/images/8.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Sugar Level Balance</h3>
           <p class="text-gray-700 flex-1 mb-4">Natural sugar regulation.</p>
@@ -150,7 +150,7 @@
 
       <!-- PRODUCT 9 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/9.jpg" class="w-full h-48 object-cover">
+        <img src="/images/9.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Ovulation Rotator</h3>
           <p class="text-gray-700 flex-1 mb-4">Cycle regulation formula.</p>
@@ -161,123 +161,11 @@
 
       <!-- PRODUCT 10 -->
       <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/10.jpg" class="w-full h-48 object-cover">
+        <img src="/images/10.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1">
           <h3 class="font-semibold mb-2">Liver Cleanser</h3>
           <p class="text-gray-700 flex-1 mb-4">Deep liver detox.</p>
           <a href="https://wa.me/14057656304?text=I want Liver Cleanser"
-             class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- PRODUCT 11 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/11.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">Menstrual Flow Regulator</h3>
-          <p class="text-gray-700 flex-1 mb-4">Balances menstrual cycle.</p>
-          <a href="https://wa.me/14057656304?text=I want Menstrual Flow Regulator"
-             class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- 12 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/12.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">Fibroid Shrinker</h3>
-          <p class="text-gray-700 flex-1 mb-4">Shrinks fibroid growth naturally.</p>
-          <a href="https://wa.me/14057656304?text=I want Fibroid Shrinker"
-             class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- 13 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/13.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">High Blood Pressure Mix</h3>
-          <p class="text-gray-700 flex-1 mb-4">Supports healthy BP levels.</p>
-          <a href="https://wa.me/14057656304?text=I want High Blood Pressure Mix"
-             class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- 14 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/14.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">Joint Pain Reliever</h3>
-          <p class="text-gray-700 flex-1 mb-4">For joints + inflammation.</p>
-          <a href="https://wa.me/14057656304?text=I want Joint Pain Reliever"
-
-🤖, [11/14/2025 11:28 PM]
-class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- 15 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/15.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">Prostate Care Formula</h3>
-          <p class="text-gray-700 flex-1 mb-4">Supports prostate health.</p>
-          <a href="https://wa.me/14057656304?text=I want Prostate Care Formula"
-             class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- 16 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/16.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">Arthritis Treatment</h3>
-          <p class="text-gray-700 flex-1 mb-4">Deep bone + joint therapy.</p>
-          <a href="https://wa.me/14057656304?text=I want Arthritis Treatment"
-             class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- 17 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/17.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">Weight Gain Herbal Mix</h3>
-          <p class="text-gray-700 flex-1 mb-4">Healthy weight-building formula.</p>
-          <a href="https://wa.me/14057656304?text=I want Weight Gain Herbal Mix"
-             class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- 18 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/18.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">Ulcer Treatment</h3>
-          <p class="text-gray-700 flex-1 mb-4">Heals stomach lining.</p>
-          <a href="https://wa.me/14057656304?text=I want Ulcer Treatment"
-             class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- 19 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/19.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">General Body Cleanser</h3>
-          <p class="text-gray-700 flex-1 mb-4">Total body detox.</p>
-          <a href="https://wa.me/14057656304?text=I want General Body Cleanser"
-             class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
-        </div>
-      </div>
-
-      <!-- 20 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden flex flex-col">
-        <img src="./images/20.jpg" class="w-full h-48 object-cover">
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="font-semibold mb-2">Heart Health Formula</h3>
-          <p class="text-gray-700 flex-1 mb-4">Strengthens heart function.</p>
-          <a href="https://wa.me/14057656304?text=I want Heart Health Formula"
              class="bg-green-600 hover:bg-green-700 text-white text-center py-2 rounded-md">ORDER</a>
         </div>
       </div>
