--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pascaqueen Herbal Shop</title>
   <!-- Tailwind CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.3/dist/tailwind.min.css" rel="stylesheet">
-  <!-- Swiper.js for slider -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Swiper.js -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body class="bg-gradient-to-b from-green-50 via-green-100 to-green-50 font-sans text-gray-900">
 
-  <!-- Header & Nav -->
+  <!-- Header -->
   <header class="bg-black text-white shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto flex justify-between items-center py-4 px-6">
-      <img src="/images/logo.jpg" alt="Pascaqueen logo" class="h-16 sm:h-20 md:h-24 w-auto object-contain">
+      <img src="images/logo.jpg" alt="Pascaqueen logo" class="h-20 w-auto object-contain">
       <nav>
-        <ul class="flex space-x-5 sm:space-x-6 font-semibold text-sm sm:text-base">
+        <ul class="flex space-x-6 font-semibold text-base">
           <li><a href="#home" class="hover:text-green-400">Home</a></li>
           <li><a href="#products" class="hover:text-green-400">Products</a></li>
           <li><a href="#about" class="hover:text-green-400">About Us</a></li>
@@ -27,15 +27,15 @@
     </div>
   </header>
 
-  <!-- Slider Section -->
+  <!-- Slider -->
   <section id="home" class="py-6 px-4">
     <div class="swiper mySwiper max-w-7xl mx-auto rounded-lg overflow-hidden shadow-lg">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="/images/slider1.jpg" class="w-full h-56 sm:h-64 md:h-80 lg:h-[480px] object-cover"></div>
-        <div class="swiper-slide"><img src="/images/slider2.jpg" class="w-full h-56 sm:h-64 md:h-80 lg:h-[480px] object-cover"></div>
-        <div class="swiper-slide"><img src="/images/slider3.jpg" class="w-full h-56 sm:h-64 md:h-80 lg:h-[480px] object-cover"></div>
-        <div class="swiper-slide"><img src="/images/slider4.jpg" class="w-full h-56 sm:h-64 md:h-80 lg:h-[480px] object-cover"></div>
-        <div class="swiper-slide"><img src="/images/slider5.jpg" class="w-full h-56 sm:h-64 md:h-80 lg:h-[480px] object-cover"></div>
+        <div class="swiper-slide"><img src="images/slider1.jpg" class="w-full h-64 sm:h-80 md:h-96 lg:h-[480px] object-cover rounded-md"></div>
+        <div class="swiper-slide"><img src="images/slider2.jpg" class="w-full h-64 sm:h-80 md:h-96 lg:h-[480px] object-cover rounded-md"></div>
+        <div class="swiper-slide"><img src="images/slider3.jpg" class="w-full h-64 sm:h-80 md:h-96 lg:h-[480px] object-cover rounded-md"></div>
+        <div class="swiper-slide"><img src="images/slider4.jpg" class="w-full h-64 sm:h-80 md:h-96 lg:h-[480px] object-cover rounded-md"></div>
+        <div class="swiper-slide"><img src="images/slider5.jpg" class="w-full h-64 sm:h-80 md:h-96 lg:h-[480px] object-cover rounded-md"></div>
       </div>
       <div class="swiper-pagination"></div>
       <div class="swiper-button-prev text-green-500"></div>
@@ -43,14 +43,14 @@
     </div>
   </section>
 
-  <!-- Products Grid -->
-  <section id="products" class="py-10 px-4">
-    <h2 class="text-2xl sm:text-3xl font-bold text-center text-green-900 mb-8">Our Herbal Products</h2>
+  <!-- Products -->
+  <section id="products" class="py-12 px-6">
+    <h2 class="text-3xl font-bold text-center text-green-900 mb-10">Our Herbal Products</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 max-w-7xl mx-auto">
 
-      <!-- Product Cards -->
+      <!-- Product card template -->
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product1.jpg" class="w-full h-48 object-cover">
+        <img src="images/product1.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
           <h3 class="font-semibold text-lg mb-2">Flat Tummy Herb</h3>
           <p class="text-gray-300 flex-1 mb-4">Natural stomach-slimming blend.</p>
@@ -58,8 +58,9 @@
         </div>
       </div>
 
+      <!-- Repeat product cards with proper spacing -->
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product2.jpg" class="w-full h-48 object-cover">
+        <img src="images/product2.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
           <h3 class="font-semibold text-lg mb-2">Eye Bright Herb</h3>
           <p class="text-gray-300 flex-1 mb-4">Supports clear eyesight.</p>
@@ -68,16 +69,17 @@
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product3.jpg" class="w-full h-48 object-cover">
+        <img src="images/product3.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
-          <h3 class="font-semibold text-lg mb-2">Blood Cleanser</h3>
+
+<h3 class="font-semibold text-lg mb-2">Blood Cleanser</h3>
           <p class="text-gray-300 flex-1 mb-4">Body detox and circulation booster.</p>
           <a href="https://wa.me/14057656304?text=I want Blood Cleanser" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product4.jpg" class="w-full h-48 object-cover">
+        <img src="images/product4.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
           <h3 class="font-semibold text-lg mb-2">Fertility Booster</h3>
           <p class="text-gray-300 flex-1 mb-4">Reproductive system support.</p>
@@ -86,7 +88,7 @@
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product5.jpg" class="w-full h-48 object-cover">
+        <img src="images/product5.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
           <h3 class="font-semibold text-lg mb-2">Stroke Recovery Mix</h3>
           <p class="text-gray-300 flex-1 mb-4">Nerve + brain restoration herbs.</p>
@@ -95,7 +97,7 @@
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product6.jpg" class="w-full h-48 object-cover">
+        <img src="images/product6.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
           <h3 class="font-semibold text-lg mb-2">Immune Booster</h3>
           <p class="text-gray-300 flex-1 mb-4">Supports natural immunity.</p>
@@ -104,7 +106,7 @@
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product7.jpg" class="w-full h-48 object-cover">
+        <img src="images/product7.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
           <h3 class="font-semibold text-lg mb-2">Skin Glow Mix</h3>
           <p class="text-gray-300 flex-1 mb-4">Brightens and clears skin.</p>
@@ -113,7 +115,7 @@
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product8.jpg" class="w-full h-48 object-cover">
+        <img src="images/product8.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
           <h3 class="font-semibold text-lg mb-2">Sugar Level Balance</h3>
           <p class="text-gray-300 flex-1 mb-4">Natural sugar regulation.</p>
@@ -122,7 +124,7 @@
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product9.jpg" class="w-full h-48 object-cover">
+        <img src="images/product9.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
           <h3 class="font-semibold text-lg mb-2">Ovulation Rotator</h3>
           <p class="text-gray-300 flex-1 mb-4">Cycle regulation formula.</p>
@@ -131,9 +133,10 @@
       </div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
-        <img src="/images/product10.jpg" class="w-full h-48 object-cover">
+        <img src="images/product10.jpg" class="w-full h-48 object-cover">
         <div class="p-4 flex flex-col flex-1 justify-between">
-          <h3 class="font-semibold text-lg mb-2">Liver Cleanser</h3>
+
+<h3 class="font-semibold text-lg mb-2">Liver Cleanser</h3>
           <p class="text-gray-300 flex-1 mb-4">Deep liver detox.</p>
           <a href="https://wa.me/14057656304?text=I want Liver Cleanser" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
@@ -142,32 +145,31 @@
     </div>
   </section>
 
-  <!-- About Section -->
+  <!-- About -->
   <section id="about" class="py-10 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl sm:text-3xl font-bold text-green-900 mb-4">About Us</h2>
-    <p class="text-gray-800 text-sm sm:text-base leading-relaxed">
+    <h2 class="text-3xl font-bold text-green-900 mb-4">About Us</h2>
+    <p class="text-gray-800 text-base leading-relaxed">
       Pascaqueen provides quality herbal wellness products, trusted and delivered across Nigeria, crafted to restore balance the way nature intended.
     </p>
   </section>
 
-  <!-- Contact Section -->
+  <!-- Contact -->
   <section id="contact" class="py-10 px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl sm:text-3xl font-bold text-green-900 mb-4">Contact Us</h2>
-    <p class="text-gray-800 text-sm sm:text-base mb-6">
+    <h2 class="text-3xl font-bold text-green-900 mb-4">Contact Us</h2>
+    <p class="text-gray-800 text-base mb-6">
       Orders happen fast on WhatsApp, questions get answered with herbal wisdom.
     </p>
-    <a href="https://wa.me/14057656304?text=Hello Pascaqueen" 
-       class="bg-green-700 hover:bg-green-800 text-white py-3 px-6 rounded-md font-semibold text-sm sm:text-base">
-       ORDER NOW
+    <a href="https://wa.me/14057656304?text=Hello Pascaqueen" class="bg-green-700 hover:bg-green-800 text-white py-3 px-6 rounded-md font-semibold text-base">
+      ORDER NOW
     </a>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-black text-white py-6 text-center border-t border-gray-800 mt-12 text-xs sm:text-sm">
+  <footer class="bg-black text-white py-6 text-center border-t border-gray-800 mt-12 text-sm">
     &copy; 2025 Pascaqueen Herbal Shop. Made with plant alchemy and code sorcery.
   </footer>
 
-  <!-- Swiper slider INIT -->
+  <!-- Swiper init -->
   <script>
     new Swiper(".mySwiper", {
       loop: true,
