--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- Products -->
   <section id="products" class="py-12 px-6">
     <h2 class="text-3xl font-bold text-center text-green-900 mb-10">Our Herbal Products</h2>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 max-w-7xl mx-auto">
+    <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 max-w-7xl mx-auto">
 
       <!-- Product card template -->
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
@@ -130,7 +130,25 @@
           <p class="text-gray-300 flex-1 mb-4">Cycle regulation formula.</p>
           <a href="https://wa.me/14057656304?text=I want Ovulation Rotator" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
         </div>
-      </div>
+	</div>
+	
+	<div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
+        <img src="images/product9.jpg" class="w-full h-48 object-cover">
+        <div class="p-4 flex flex-col flex-1 justify-between">
+          <h3 class="font-semibold text-lg mb-2">Ovulation Rotator</h3>
+          <p class="text-gray-300 flex-1 mb-4">Cycle regulation formula.</p>
+          <a href="https://wa.me/14057656304?text=I want Ovulation Rotator" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
+        </div>      
+	</div>
+	
+	<div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
+        <img src="images/product9.jpg" class="w-full h-48 object-cover">
+        <div class="p-4 flex flex-col flex-1 justify-between">
+          <h3 class="font-semibold text-lg mb-2">Ovulation Rotator</h3>
+          <p class="text-gray-300 flex-1 mb-4">Cycle regulation formula.</p>
+          <a href="https://wa.me/14057656304?text=I want Ovulation Rotator" class="bg-green-700 hover:bg-green-800 text-white py-2 rounded-md text-center text-sm">ORDER</a>
+        </div>      	
+	</div>
 
       <div class="bg-black rounded-lg overflow-hidden shadow-md flex flex-col text-white">
         <img src="images/product10.jpg" class="w-full h-48 object-cover">
@@ -149,7 +167,27 @@
   <section id="about" class="py-10 px-6 max-w-6xl mx-auto">
     <h2 class="text-3xl font-bold text-green-900 mb-4">About Us</h2>
     <p class="text-gray-800 text-base leading-relaxed">
-      Pascaqueen provides quality herbal wellness products, trusted and delivered across Nigeria, crafted to restore balance the way nature intended.
+      In Calabar we run a Body Correction Cente in TIC. A body correction center that diagnosis various body parts.
+We use food and tea to replace all body and bone mineral that is spotted in the test. We then offer various treatments and services aimed at improving the appearance of the body.
+
+Some services We Offer are as follows;
+1. Heart Contouring. This the process of supplying blood and food to the heart alongside breathing exercise, 
+then after that the heart will undergo cleansing of cholesterol, blood fat, blood viscosity and return the heart to it's perfect condition. 
+2. Weight Loss Programs: Guidance and support for weight loss, including:
+    - Diet plans and nutrition counseling
+    - Exercise programs and fitness coaching
+    - Behavioral modification techniques
+3. Post-Non Surgical Care: Support and treatment for individuals who have internal growth  such as: fibroids, cervical growth. Ovarian cyst appendicitis, 
+Prostate Various liquid are prepared to shrink the growth without surgery you will be on specific diet during the period 
+4. Skin Rejuvenation: Treatments to improve skin texture and appearance, through food and tea therapy   
+5. Muscle building and Strengthening: Services aimed at improving muscle tone and strength, such as: building muscle through exercises and food 
+6. Liver Contour: this is the process of nurturing the liver with plant base proteinous food and later cleanse the liver of every fat
+7.  Kidney Care: this is the process of cleaning the kidney of all salty element, kidney stone, uric acid 
+and proteinamia and return the kidney back to it's perfect condition.
+8. Immune system Care: this is the process of building the immune system up with food and tea 
+9. Male and Female reproductive system contour. This is the process of shrinking all growth in the system and cleaning of all pathogens that disrupt 
+the production and sexual process.
+10.  Joint Pain relief Therapy: this is through exercises, massages, supply of bone minerals with only food and tea.
     </p>
   </section>
 
@@ -157,19 +195,50 @@
   <section id="contact" class="py-10 px-6 max-w-6xl mx-auto">
     <h2 class="text-3xl font-bold text-green-900 mb-4">Contact Us</h2>
     <p class="text-gray-800 text-base mb-6">
-      Orders happen fast on WhatsApp, questions get answered with herbal wisdom.
+      Orders happen fast on WhatsApp, questions get answered with herbal wisdom. </p>
+<p class="text-gray-800 text-base mb-6">
+  YOU CAN REACH US ALSO THROUGH THE FOLLOWING >>>>>  +234 902 000 9988 + 234 706 282 3828 +234 814 673 0044 +1 405 765 6304
     </p>
     <a href="https://wa.me/14057656304?text=Hello Pascaqueen" class="bg-green-700 hover:bg-green-800 text-white py-3 px-6 rounded-md font-semibold text-base">
       ORDER NOW
     </a>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-black text-white py-6 text-center border-t border-gray-800 mt-12 text-sm">
-    &copy; 2025 Pascaqueen Herbal Shop. Made with plant alchemy and code sorcery.
-  </footer>
+</section>
 
-  <!-- Swiper init -->
+<!-- Orders Counter -->
+<section class="py-8 bg-green-100">
+  <div class="max-w-7xl mx-auto text-center">
+    <h2 class="text-3xl sm:text-4xl font-bold text-green-900 mb-2">Trusted by thousands</h2>
+    <p class="text-xl sm:text-2xl font-semibold text-gray-800">
+      <span id="orderCounter">0</span> orders delivered
+    </p>
+  </div>
+</section>
+  <!-- Footer -->
+  <footer class="bg-black text-white py-6 text-center border-t border-gray-800 mt-12 text-xs sm:text-sm">
+  <div class="mb-2">
+    <a href="index.html" class="hover:text-green-400 mx-2">Home</a> |
+    <a href="about.html" class="hover:text-green-400 mx-2">About Us</a> |
+    <a href="contact.html" class="hover:text-green-400 mx-2">Contact</a>
+  </div>
+  &copy; 2025 Pascaqueen Herbal Shop. Made with plant alchemy and code sorcery.
+</footer>
+
+<script>
+  const counter = document.getElementById('orderCounter');
+  let count = 0;
+  const target = 10000;
+  function updateCounter() {
+    count += Math.ceil(target / 200);
+    if(count > target) count = target;
+    counter.innerText = count.toLocaleString();
+    if(count < target) requestAnimationFrame(updateCounter);
+  }
+  updateCounter();
+</script>
+  
+<!-- Swiper init -->
   <script>
     new Swiper(".mySwiper", {
       loop: true,
